tests/ui/const-generics/bad-subst-const-kind.stderr
error: the constant `N` is not of type `usize`
  --> $DIR/bad-subst-const-kind.rs:8:26
   |
LL | impl<const N: u64> Q for [u8; N] {
   |                          ^^^^^^^ expected `usize`, found `u64`

error: the constant `13` is not of type `u64`
  --> $DIR/bad-subst-const-kind.rs:14:24
   |
LL | pub fn test() -> [u8; <[u8; 13] as Q>::ASSOC] {
   |                        ^^^^^^^^ expected `u64`, found `usize`
   |
note: required for `[u8; 13]` to implement `Q`
  --> $DIR/bad-subst-const-kind.rs:8:20
   |
LL | impl<const N: u64> Q for [u8; N] {
   |      ------------  ^     ^^^^^^^
   |      |
   |      unsatisfied trait bound introduced here

error[E0308]: mismatched types
  --> $DIR/bad-subst-const-kind.rs:8:31
   |
LL | impl<const N: u64> Q for [u8; N] {
   |                               ^ expected `usize`, found `u64`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0308`.
